fix header on mobile

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -3,15 +3,10 @@
     z-index: 20;
     overflow: hidden;
     width: 100%;
-    height: 80vh;
     background-color: $c-blue;
     background-image: url('{{ path }}/assets/crowd.png');
     background-repeat: repeat-x;
     background-position: center 200%;
-
-    @include mq(tablet) {
-        height: auto;
-    }
 
     .uit-container {
         border: 0;
@@ -74,11 +69,19 @@
 }
 
 .uit-header .uit-share {
-    margin-top: 140%;
-    padding-bottom: 12px;
+    @include mq($until: tablet) {
+        position: absolute;
+        bottom: 12px;
+        left: 10px;
+    }
+
+    @include mq(mobileLandscape, tablet) {
+        left: 20px;
+    }
 
     @include mq(tablet) {
         margin-top: 300px;
+        padding-bottom: 12px;
     }
 
     @include mq(desktop) {
@@ -103,17 +106,20 @@
 }
 
 .uit-header__man {
-    position: absolute;
-    bottom: -5%;
-    left: 0;
-    right: 0;
     width: 60%;
-    margin: auto;
+    margin: 0 auto;
+    display: block;
+
+    @include mq($until: tablet) {
+        margin-bottom: -10%;
+    }
 
     @include mq(tablet) {
+        position: absolute;
         bottom: -10%;
         margin: 0;
-        left: auto;
+        right: 0;
+        margin: auto;
         width: 300px;
     }
 
